# pete-data-sanitizer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  STARTUP_GUIDE.md  build_staging.py  config.example.yaml  docker-compose.yml  inspect_data.py  lego.md  loaders.py  main.py  nginx.conf.example  pete-dm-clean.service  pyproject.toml  pyrightconfig.json  start.sh
.cursor/rules/: codechartst.mdc  devman.mdc  gitlocal2026.mdc  mappingmanifest.mdc  pydantic.mdc  pytestnosandbox.mdc  pythonic.mdc  runtime-tracker.mdc  sqlalchemy2026.mdc
DEV_MAN/Plans/: AI_Magnifying_Glass_Playbook.md  DeepDiveDiagram_v0.0.4.md  Pyflowv1.md
backend/: README.md
depreciated/: README.md
frontend/: README.md
pete_dm_clean/: __init__.py  __main__.py  app_config.py  cli.py  companies.py  config.py  debug_report.py  diagrams.py  generators.py  logging.py  runtime.py  server.py  skiptrace_convert.py  template_inherit.py
pete_dm_clean/db/: __init__.py  ingest.py  models.py  session.py  settings.py
pete_dm_clean/ui/: __init__.py
pete_dm_clean/ui/templates/: base.html  build_done.html  dashboard.html  error.html  markdown_view.html  preview.html  settings.html  skiptrace.html  skiptrace_done.html
tests/: conftest.py  test_company_paths.py  test_config_validation.py  test_export_prefix_from_input.py  test_full_address_strip_zip.py  test_import_sanitization.py  test_phone_normalization.py  test_template_inherit.py  test_web_ui_build.py
uploads/templates/: Properties Template (15).xlsx
